[gd_scene load_steps=49 format=2]

[ext_resource path="res://assets/Fonts_v2/PT_Sans/PTSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=2]
[ext_resource path="res://assets/Textures_v2/MANSION/Job/button_occupation.png" type="Texture" id=3]
[ext_resource path="res://assets/Textures_v2/MANSION/Job/button_occupation_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/Textures_v2/MANSION/Job/button_occupation_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/Themes_v2/CHAR_CREATION/ChC_Theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/Themes_v2/EmptyTexture.tres" type="StyleBox" id=7]
[ext_resource path="res://assets/images/sexicons/male.png" type="Texture" id=8]
[ext_resource path="res://assets/Themes_v2/MANSION/M_SlaveList.tres" type="Theme" id=9]
[ext_resource path="res://assets/Themes_v2/MANSION/M_SlaveList_Button.tres" type="Theme" id=10]
[ext_resource path="res://assets/Themes_v2/MANSION/M_SlaveList_Categories.tres" type="Theme" id=11]
[ext_resource path="res://dragarraytemplate.gd" type="Script" id=12]
[ext_resource path="res://gui_modules/Mansion/Scripts/MansionSlaveListModule.gd" type="Script" id=13]
[ext_resource path="res://assets/Textures_v2/Universal/Icons/icon_foodperday.png" type="Texture" id=14]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Buttons/button_job_chars.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Buttons/button_job_chars_pressed.png" type="Texture" id=16]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Bars/hpmp_icon_hp.png" type="Texture" id=17]
[ext_resource path="res://assets/Textures_v2/Universal/Icons/icon_population.png" type="Texture" id=18]
[ext_resource path="res://assets/Textures_v2/Universal/Icons/divider_navi_slavelist.png" type="Texture" id=19]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Buttons/button_job_chars_hover.png" type="Texture" id=20]
[ext_resource path="res://assets/Textures_v2/MANSION/yes.png" type="Texture" id=21]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Icons/hpmp_icon.png" type="Texture" id=22]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Icons/icon_slave.png" type="Texture" id=23]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Bars/hpmp_icon_mp.png" type="Texture" id=24]
[ext_resource path="res://assets/Themes_v2/MANSION/MansionSlaveListPanel.tres" type="StyleBox" id=25]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainBig.tres" type="DynamicFont" id=26]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=27]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainSmall.tres" type="DynamicFont" id=28]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/button_occupation_disabled.png" type="Texture" id=29]
[ext_resource path="res://assets/images/gui/gui icons/icon_interactions.png" type="Texture" id=30]
[ext_resource path="res://assets/images/gui/gui icons/icon_bedlimit.png" type="Texture" id=31]
[ext_resource path="res://assets/images/gui/gui icons/icon_twohearts.png" type="Texture" id=32]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Bars/bar_trainees.png" type="Texture" id=33]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Bars/bar_trainees_filler.png" type="Texture" id=34]
[ext_resource path="res://assets/Textures_v2/MANSION/no.png" type="Texture" id=35]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Buttons/button_job_chars_disabled.png" type="Texture" id=36]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Buttons/button_inventory_neutral.png" type="Texture" id=37]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Buttons/button_inventory_hover.png" type="Texture" id=38]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Buttons/frame_inventory.png" type="Texture" id=39]
[ext_resource path="res://assets/Textures_v2/MANSION/icon_interactions.png" type="Texture" id=40]
[ext_resource path="res://assets/Textures_v2/MANSION/icon_twohearts.png" type="Texture" id=41]
[ext_resource path="res://assets/images/iconsgear/battleaxe.png" type="Texture" id=42]

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxTexture" id=1]

[sub_resource type="StyleBoxTexture" id=2]

[sub_resource type="StyleBoxTexture" id=3]

[sub_resource type="StyleBoxTexture" id=4]

[sub_resource type="StyleBoxTexture" id=5]

[node name="MansionSlaveListModule" type="Panel"]
margin_right = 1100.0
margin_bottom = 845.0
theme = ExtResource( 9 )
custom_styles/panel = ExtResource( 25 )
script = ExtResource( 13 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 446.923
margin_top = 7.7562
margin_right = 623.923
margin_bottom = 47.7562
custom_colors/font_color = Color( 0.866667, 0.905882, 0.478431, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMNAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
visible = false
self_modulate = Color( 0, 0, 0, 0.705882 )
show_behind_parent = true
margin_right = 1075.0
margin_bottom = 499.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Categories" type="VBoxContainer" parent="."]
margin_left = 14.0
margin_top = 20.0
margin_right = 1068.0
margin_bottom = 70.0
size_flags_horizontal = 3
theme = ExtResource( 11 )

[node name="Button" type="TextureButton" parent="Categories"]
margin_right = 1054.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="Categories/Button"]
margin_left = -5.0
margin_top = 3.0
margin_right = 986.0
margin_bottom = 54.0

[node name="icon" type="TextureRect" parent="Categories/Button/HBoxContainer"]
margin_right = 50.0
margin_bottom = 51.0
rect_min_size = Vector2( 50, 0 )
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="sex" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 54.0
margin_top = 4.0
margin_right = 179.0
margin_bottom = 46.0
rect_min_size = Vector2( 50, 0 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMSex"

[node name="name" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 183.0
margin_top = 4.0
margin_right = 357.0
margin_bottom = 46.0
rect_min_size = Vector2( 125, 0 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMNNAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 361.0
margin_top = 4.0
margin_right = 507.0
margin_bottom = 46.0
rect_min_size = Vector2( 100, 0 )
mouse_filter = 0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMSTAT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="job" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 511.0
margin_top = 4.0
margin_right = 671.0
margin_bottom = 46.0
rect_min_size = Vector2( 160, 0 )
size_flags_horizontal = 0
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMOCCU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inventory" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 675.0
margin_top = 4.0
margin_right = 825.0
margin_bottom = 46.0
rect_min_size = Vector2( 150, 0 )
hint_tooltip = "STATOBEDIENCEDESCRIPT"
mouse_filter = 0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMINV"
align = 1

[node name="explabel" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 829.0
margin_top = 4.0
margin_right = 957.0
margin_bottom = 46.0
rect_min_size = Vector2( 70, 0 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMEXP"

[node name="icon2" type="TextureRect" parent="Categories/Button/HBoxContainer"]
margin_left = 961.0
margin_right = 1011.0
margin_bottom = 51.0
rect_min_size = Vector2( 50, 0 )
mouse_filter = 2
texture = ExtResource( 41 )
expand = true
stretch_mode = 6

[node name="icon3" type="TextureRect" parent="Categories/Button/HBoxContainer"]
margin_left = 1015.0
margin_right = 1065.0
margin_bottom = 51.0
rect_min_size = Vector2( 50, 0 )
mouse_filter = 2
texture = ExtResource( 40 )
expand = true
stretch_mode = 6

[node name="icon4" type="TextureRect" parent="Categories/Button/HBoxContainer"]
margin_left = 1069.0
margin_right = 1119.0
margin_bottom = 51.0
rect_min_size = Vector2( 50, 0 )
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="location" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 1123.0
margin_top = 4.0
margin_right = 1223.0
margin_bottom = 46.0
rect_min_size = Vector2( 100, 0 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="state2" type="Label" parent="Categories/Button/HBoxContainer"]
margin_left = 1227.0
margin_top = 4.0
margin_right = 1371.0
margin_bottom = 46.0
rect_min_size = Vector2( 50, 0 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 26 )
text = "MSLMTYPE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 11.0
margin_top = 80.0
margin_right = 1089.0
margin_bottom = 718.0
rect_min_size = Vector2( 996, 10 )
theme = ExtResource( 2 )
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1078.0
margin_bottom = 45.0
rect_min_size = Vector2( 996, 45 )
size_flags_horizontal = 3
custom_constants/separation = 1

[node name="Button" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_right = 1078.0
margin_bottom = 52.0
rect_min_size = Vector2( 1004, 52 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 10 )
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 20 )
texture_disabled = ExtResource( 36 )
stretch_mode = 6
script = ExtResource( 12 )

[node name="icon" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 7.0
margin_top = 5.0
margin_right = 47.0
margin_bottom = 45.0
rect_min_size = Vector2( 39, 39 )
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="sex" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 54.0
margin_top = 5.0
margin_right = 93.0
margin_bottom = 44.0
rect_min_size = Vector2( 39, 39 )
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 6

[node name="name" type="Label" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 107.0
margin_top = 5.0
margin_right = 232.0
margin_bottom = 45.0
rect_min_size = Vector2( 125, 0 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 27 )
text = "Name "
valign = 1
clip_text = true

[node name="stats" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 250.0
margin_top = 6.0
margin_right = 290.0
margin_bottom = 46.0
texture = ExtResource( 22 )

[node name="hp" type="TextureProgress" parent="ScrollContainer/VBoxContainer/Button/stats"]
show_behind_parent = true
margin_left = 2.44171
margin_top = 2.07547
margin_right = 42.4417
margin_bottom = 42.0755
value = 100.0
texture_progress = ExtResource( 17 )
fill_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mp" type="TextureProgress" parent="ScrollContainer/VBoxContainer/Button/stats"]
show_behind_parent = true
margin_left = 22.4639
margin_top = 1.83129
margin_right = 62.4639
margin_bottom = 41.8313
value = 100.0
texture_progress = ExtResource( 24 )
fill_mode = 3

[node name="job" type="TextureButton" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 311.0
margin_top = 6.0
margin_right = 480.0
margin_bottom = 46.0
size_flags_horizontal = 0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 29 )
expand = true

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Button/job"]
margin_left = 2.0
margin_right = 184.0
margin_bottom = 30.0
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 27 )
text = "Rest"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon" type="TextureButton" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 490.0
margin_top = 6.0
margin_right = 530.0
margin_bottom = 46.0
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 39 )
texture_hover = ExtResource( 38 )
expand = true

[node name="icon" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button/weapon"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 42 )
expand = true

[node name="tool" type="TextureButton" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 530.0
margin_top = 6.0
margin_right = 570.0
margin_bottom = 46.0
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 39 )
texture_hover = ExtResource( 38 )
expand = true

[node name="icon" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button/tool"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="armor1" type="TextureButton" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 570.0
margin_top = 6.0
margin_right = 610.0
margin_bottom = 46.0
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 39 )
texture_hover = ExtResource( 38 )
expand = true

[node name="icon" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button/armor1"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="armor2" type="TextureButton" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 610.0
margin_top = 6.0
margin_right = 650.0
margin_bottom = 46.0
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 39 )
texture_hover = ExtResource( 38 )
expand = true

[node name="icon" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button/armor2"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="explabel" type="Label" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 664.0
margin_top = 5.0
margin_right = 727.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 27 )
text = "1000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DateIcon" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 740.0
margin_top = 5.0
margin_right = 780.0
margin_bottom = 45.0
texture = ExtResource( 35 )
stretch_mode = 4

[node name="SexIcon" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 790.0
margin_top = 5.0
margin_right = 830.0
margin_bottom = 45.0
texture = ExtResource( 21 )
stretch_mode = 4

[node name="TrainIcon" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 836.0
margin_top = 5.0
margin_right = 876.0
margin_bottom = 45.0
texture = ExtResource( 21 )
stretch_mode = 4

[node name="LocIcon" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 940.0
margin_top = 6.0
margin_right = 980.0
margin_bottom = 46.0
texture = ExtResource( 21 )
stretch_mode = 4

[node name="loctext" type="Label" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 838.0
margin_top = 5.0
margin_right = 1049.0
margin_bottom = 43.0
rect_min_size = Vector2( 125, 0 )
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 27 )
text = "Name "
valign = 1
clip_text = true

[node name="state" type="TextureRect" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 987.0
margin_top = 5.0
margin_right = 1047.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 0 )
mouse_filter = 2
texture = ExtResource( 23 )
expand = true
stretch_mode = 6

[node name="progress" type="TextureProgress" parent="ScrollContainer/VBoxContainer/Button"]
margin_left = 423.0
margin_top = 8.0
margin_right = 846.0
margin_bottom = 42.0
texture_under = ExtResource( 33 )
texture_progress = ExtResource( 34 )

[node name="VBoxContainer" type="HBoxContainer" parent="."]
visible = false
margin_left = 30.0
margin_top = 34.0
margin_right = 893.0
margin_bottom = 74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 12.0
margin_right = 28.0
margin_bottom = 28.0
text = "Sex"

[node name="food_consumption" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -101.0
margin_top = -44.0001
margin_right = -54.0002
margin_bottom = -14.0001
hint_tooltip = "TOOLTIPFOODCONSUMPTION"
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 28 )
text = "FC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="food_consumption"]
margin_left = -45.9306
margin_top = -5.77057
margin_right = -3.9306
margin_bottom = 34.2294
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="population" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -222.0
margin_top = -46.0
margin_right = -176.0
margin_bottom = -16.0
hint_tooltip = "TOOLTIPPOPULATION"
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="population"]
margin_left = -26.1069
margin_top = -5.77057
margin_right = 5.89313
margin_bottom = 26.2294
texture = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TravelsContainerPanel" type="Panel" parent="."]
margin_left = 25.0
margin_top = 526.0
margin_right = 1082.0
margin_bottom = 569.0
custom_styles/panel = ExtResource( 7 )

[node name="TravelsContainer" type="ScrollContainer" parent="TravelsContainerPanel"]
margin_left = 2.0
margin_right = 1053.0
margin_bottom = 55.0
rect_min_size = Vector2( 0, 55 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="TravelsContainerPanel/TravelsContainer"]
custom_constants/separation = 18

[node name="Button" type="Button" parent="TravelsContainerPanel/TravelsContainer/HBoxContainer"]
visible = false
margin_right = 108.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.6, 0.513726, 0.435294, 1 )
custom_colors/font_color_hover = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_pressed = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
toggle_mode = true
text = "Mansion"
flat = true

[node name="VSeparator" type="TextureRect" parent="TravelsContainerPanel"]
visible = false
margin_left = 2.0
margin_right = 4.0
margin_bottom = 32.0
texture = ExtResource( 19 )

[node name="BedroomIcon" type="TextureRect" parent="."]
margin_left = 680.272
margin_top = 794.056
margin_right = 732.272
margin_bottom = 834.056
texture = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DateIcon" type="TextureRect" parent="."]
margin_left = 325.272
margin_top = 794.056
margin_right = 377.272
margin_bottom = 834.056
texture = ExtResource( 32 )

[node name="SexIcon" type="TextureRect" parent="."]
margin_left = 509.133
margin_top = 793.796
margin_right = 561.133
margin_bottom = 833.796
hint_tooltip = "Date limit. Renews once a week."
texture = ExtResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BedroomLimit" type="Label" parent="."]
margin_left = 731.326
margin_top = 795.316
margin_right = 831.326
margin_bottom = 835.316
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 27 )
text = "1/1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DateLimit" type="Label" parent="."]
margin_left = 377.0
margin_top = 794.0
margin_right = 477.0
margin_bottom = 829.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 27 )
text = "1/1"
align = 1
valign = 1

[node name="SexLimit" type="Label" parent="."]
margin_left = 556.0
margin_top = 794.0
margin_right = 656.0
margin_bottom = 829.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 27 )
text = "1/1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
